Overflow fixes

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -318,7 +318,7 @@ header {
 }
 
 .featured-desktop {
-  position: absolute;
+  position: relative;
   max-width: 100vw;
   height: auto;
   grid-column: 2/4;
@@ -543,6 +543,17 @@ li:not(:last-child) {
 
   .designed-for-the-future-section {
     width: auto;
+  }
+
+  .featured-desktop {
+    position: relative;
+    max-width: 100vw;
+    height: auto;
+    grid-column: 2/4;
+    grid-row: 2/4;
+    margin-left: 12rem;
+    margin-top: 7rem;
+    width: 24rem;
   }
 
   .state-of-the-art--container {
