--- a/styles/scss/styles/_design-future-section.scss
+++ b/styles/scss/styles/_design-future-section.scss
@@ -87,7 +87,7 @@
 }
 
 .featured-desktop {
-  position: absolute;
+  position: relative;
   max-width: 100vw;
   height: auto;
   grid-column: 2 / 4; /* span from grid column line 1 to 3 (i.e., span 2 columns) */
