--- a/styles/scss/styles/_responsive-queries.scss
+++ b/styles/scss/styles/_responsive-queries.scss
@@ -24,12 +24,24 @@
     margin-right: 20px;
     width: auto;
   }
+  
   .designed-for-the-future--description-section {
     padding-left: 7rem;
   }
 
   .designed-for-the-future-section{
     width: auto;
+  }
+
+  .featured-desktop {
+    position: relative;
+    max-width: 100vw;
+    height: auto;
+    grid-column: 2/4;
+    grid-row: 2/4;
+    margin-left: 12rem;
+    margin-top: 7rem;
+    width: 24rem;
   }
 
   .state-of-the-art--container {
